--- a/ui/DoistHelloWorld/src/App.css
+++ b/ui/DoistHelloWorld/src/App.css
@@ -1,7 +1,7 @@
 .App {
   height: 100%;
-  min-height: 400px;
-  text-align: center;
+  width: 100%;
+  text-align: left;
   display: flex;
   flex-direction: column;
   justify-content: stretch;
@@ -31,7 +31,7 @@ a:hover, a:active {
   height: 93.5%;
   width: 9.0%;
   font-size: 12px;
-  position: absolute;
+  position: fixed;
   top: 6.5%;
   left: 0;
   background-color: #999999;
@@ -42,42 +42,48 @@ a:hover, a:active {
   justify-content: left;
 }
 
-.App-flex {
-  flex: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.MainView {
+  height: 93.5%;
+  width: 91.0%;
+  position: fixed;
+  top: 6.5%;
+  left: 9.0%;
+  background-color: #ffe0b3;
+  border: 0;
 }
 
-.App-heading {
-  background-color: #222;
-  color: #f8f8f8;
-  font-size: 6vh;
-  box-shadow: 0px 4px 4vh 4px rgba(34,34,34,0.9);
-  z-index: 2;
+.DoistDemo {
+  height: 93.5%;
+  width: 45.5%;
+  position: fixed;
+  top: 6.5%;
+  left: 9.0%;
+  background-color: #ffffff;
+  border-style: solid;
+  border-color: #808080;
+  border-width: 2px;
 }
 
-.App-react {
-  color: #00d8ff;
-  text-decoration: overline underline;
+.Todoist {
+  height: 46.5%;
+  width: 45.0%;
+  position: fixed;
+  top: 6.5%;
+  left: 54.5%;
+  background-color: #ffffff;
+  border-style: solid;
+  border-color: #808080;
+  border-width: 2px;
 }
 
-.App-logo {
-  max-height: 30vh;
-  max-width: 30vh;
-}
-
-.App-instructions {
-  background-color: #f8f8f8;
-  color: #222;
-  font-size: 3vh;
-  line-height: 1.5;
-  padding: 0 1em;
-}
-
-.App-instructions code {
-  background-color: #222;
-  color: #00d8ff;
-  padding: .2em .3em;
-  border-radius: .2em;
+.Twist {
+  height: 46.5%;
+  width: 45.0%;
+  position: fixed;
+  top: 53.0%;
+  left: 54.5%;
+  background-color: #ffffff;
+  border-style: solid;
+  border-color: #808080;
+  border-width: 2px;
 }
