--- a/ui/DoistDemo/src/App.css
+++ b/ui/DoistDemo/src/App.css
@@ -27,6 +27,14 @@ a:hover, a:active {
   border: 0;
 }
 
+h1 {
+  top: 20.0%;
+}
+
+.PageHeading {
+  top: 20.0%;
+}
+
 .NavMenu {
   height: 93.5%;
   width: 9.0%;
@@ -34,7 +42,7 @@ a:hover, a:active {
   position: fixed;
   top: 6.5%;
   left: 0;
-  background-color: #999999;
+  background-color: #4d4d4d;
   border: 0;
   display: flex;
   align-items: left;
@@ -48,8 +56,9 @@ a:hover, a:active {
   position: fixed;
   top: 6.5%;
   left: 9.0%;
-  background-color: #ffe0b3;
+  background-color: #ffffff;
   border: 0;
+  text-align: center;
 }
 
 .DoistDemo {
@@ -65,13 +74,24 @@ a:hover, a:active {
 }
 
 .DoistDemoTopBar {
-  height: 6.5%;
+  height: 5.1%;
   width: 100%;
   position: fixed;
   top: 6.5%;
   left: 9.0%;
-  background-color :lightblue;
-  border: 0;
+  background-color: darkgreen;
+  border: 2 solid black;
+}
+
+.DoistDemoButton {
+  height: 4.0%;
+  width: 38px;
+  position: fixed;
+  top: 7.1%;
+  left: 9.5%;
+  background-color: lightgreen;
+  font-size: x-small;
+  text-align: center;
 }
 
 .Todoist {
