--- a/ui/DoistDemo/src/App.css
+++ b/ui/DoistDemo/src/App.css
@@ -162,7 +162,7 @@ h1 {
   color: #4d4d4d;
   font-family: Arial, Helvetica, serif;
   font-size: 1.3em;
-  margin: 0px 350px 0px 350px;
+  margin: 0px 200px 0px 350px;
 }
 
 .TextBodyColumn {
@@ -336,45 +336,45 @@ a.Gospel:hover {
 }
 
 [gospel-tooltip]:hover {
-	position: relative;
+  position: relative;
 }
 [gospel-tooltip]:hover::before {
-	all: initial;
-	font-family: Arial, Helvetica, sans-serif;
-	display: inline-block;
-	border-radius: 5px;
-	padding: 10px;
-	#background-color: #1a1a1a;
-	background-color: #e00000;
-	content: attr(gospel-tooltip);
-	color: #f9f9f9;
-	position: absolute;
-	bottom: auto;
-	width: 150px;
-	left: auto;
-	#transform: translate(-50%, 0);
-	transform: translate(0, -50%);
-	margin-bottom: 0px;
-	text-align: center;
-	font-size: 14px;
-	right: 100%;
-	top: 50%;
-	margin-right: 15px;
+  all: initial;
+  font-family: Arial, Helvetica, sans-serif;
+  display: inline-block;
+  border-radius: 5px;
+  padding: 10px;
+  #background-color: #1a1a1a;
+  background-color: #e00000;
+  content: attr(gospel-tooltip);
+  color: #f9f9f9;
+  position: absolute;
+  bottom: auto;
+  width: 150px;
+  left: auto;
+  #transform: translate(-50%, 0);
+  transform: translate(0, -50%);
+  margin-bottom: 0px;
+  text-align: center;
+  font-size: 14px;
+  right: 100%;
+  top: 50%;
+  margin-right: 15px;
 }
 [gospel-tooltip]:hover::after {
-	all: initial;
-	display: inline-block;
-	width: 0; 
-	height: 0; 
-	border-left: 10px solid transparent;
-	border-right: 10px solid transparent;		  
-	border-top: 10px solid #1a1a1a;
-	position: absolute;
-	bottom: auto;
-	content: '';
-	left: auto;
-        right: 100%;
-	#transform: translate(-50%, 0);
+  all: initial;
+  display: inline-block;
+  width: 0; 
+  height: 0; 
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;		  
+  border-top: 10px solid #1a1a1a;
+  position: absolute;
+  bottom: auto;
+  content: '';
+  left: auto;
+  right: 100%;
+  #transform: translate(-50%, 0);
   transform: rotate(-90deg) translate(0, -50%);
   margin-bottom: 0;
   top: 50%;
@@ -404,6 +404,28 @@ a.Gospel:hover {
   margin: 0px 5.0% 0px 5.0%;
 }
 
+.DDPopupClhp {
+  z-index: 99;
+  height: 35px;
+  width: 200px;
+  position: fixed;
+  left: 55.0%;
+  top: 45.0%;
+  background-color: #ffffff;
+  border-style: outset;
+  border-color: #808080;
+  border-width: 5px;
+}
+
+.PopupTextBodyClhp {
+  text-align: justify;
+  text-justify: inter-word;
+  color: #4d4d4d;
+  font-family: Arial, Helvetica, serif;
+  font-size: 1.0em;
+  margin: 0px 5.0% 0px 5.0%;
+}
+
 .InitDemoField {
   text-align: left;
   color: #4d4d4d;
@@ -414,3 +436,52 @@ a.Gospel:hover {
   border-color: #808080;
   border-width: 5px;
 }
+
+[clhp-tooltip]:hover {
+  position: relative;
+}
+
+[clhp-tooltip]:hover::before {
+  all: initial;
+  font-family: Arial, Helvetica, sans-serif;
+  display: inline-block;
+  border-radius: 5px;
+  padding: 10px;
+  background-color: #1a1a1a;
+  content: attr(clhp-tooltip);
+  color: #ffffff;
+  position: fixed;
+  top: 380px;
+  right: auto;
+  bottom: auto;
+  left: 950px;
+  width: 150px;
+  #transform: translate(-50%, 0);
+  transform: translate(0, -50%);
+  margin-bottom: 0px;
+  text-align: center;
+  font-size: 14px;
+  margin-right: 15px;
+}
+
+/*
+[clhp-tooltip]:hover::after {
+  all: initial;
+  display: inline-block;
+  width: 0; 
+  height: 0; 
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;		  
+  border-top: 10px solid #1a1a1a;
+  position: absolute;
+  bottom: auto;
+  content: '';
+  left: auto;
+  right: 100%;
+  transform: rotate(-90deg) translate(0, -50%);
+  margin-bottom: 0;
+  top: 50%;
+  margin-right: -5px;
+  margin-top: -5px;
+}
+*/
