--- a/src/App.css
+++ b/src/App.css
@@ -417,3 +417,79 @@ a.Gospel:hover {
   margin-top: -5px;
 }
 */
+/*
+ *  * Start of SpotOfJavaDemo css
+ *  */
+
+.SpotOfJavaDemoPane {
+  height: 93.5%;
+  width: 91.0%;
+  position: fixed;
+  top: 6.5%;
+  left: 9.0%;
+  background-color: #ffffff;
+  border-style: solid;
+  border-color: #808080;
+  border-width: 2px;
+}
+
+.SpotOfJavaDemoTopBar {
+  height: 5.1%;
+  width: 91.0%;
+  position: fixed;
+  top: 6.5%;
+  left: 9.0%;
+  background-color: darkcyan;
+  border: 2 solid black;
+}
+
+.SpotOfJavaDemoHeading {
+  top: 14.0%;
+  left: 45.5%;
+  position: fixed;
+  text-align: center;
+  color: #5a5a5a;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 36px;
+}
+
+.SpotOfJavaDemoButton {
+  height: 22px;
+  width: 40px;
+  position: fixed;
+  top: 7.4%;
+  left: 9.5%;
+  background-color: darkcyan;
+  border: none;
+  color: white;
+  padding: 1px 1px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 1px 1px;
+  cursor: pointer;
+}
+
+.SOJPopup {
+  z-index: 99;
+  height: 73.5%;
+  width: 34.0%;
+  position: fixed;
+  left: 36.5%;
+  top: 14.0%;
+  background-color: #ffffff;
+  border-style: outset;
+  border-color: #808080;
+  border-width: 5px;
+}
+
+a.SOJ:link, a:visited {
+  color:  darkred;
+  text-align: center;
+  text-decoration: none;
+}
+a.SOJ:hover, a:active {
+  color: darkcyan;
+}
+
