--- a/src/App.css
+++ b/src/App.css
@@ -69,7 +69,7 @@ a:hover, a:active {
 }
 
 .DoistDemoTopBar {
-  height: 5.1%;
+  height: 4.57%;
   width: 45.5%;
   position: fixed;
   top: 6.5%;
@@ -89,9 +89,13 @@ a:hover, a:active {
 }
 
 .DoistDemoButton {
+  /*
+  height: 22vw;
+  width: 40vw;
+  */
   height: 22px;
   width: 40px;
-  position: fixed;
+  position: relative;
   top: 7.4%;
   left: 9.5%;
   background-color: darkcyan;
